force-app/main/default/objects/Account/fields/Previous_Upload_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Upload_Status__c</fullName>
    <label>Previous Upload Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Partially Successful</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>