force-app/main/default/objects/Account/fields/Previous_Upload_Success_Count__c.field-meta.xml
<CustomField>
    <fullName>Previous_Upload_Success_Count__c</fullName>
    <label>Previous Upload Success Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>